Introduz novos modelos para eventos
O modelo "Evento" antes tinha uma série de campos que não são mais
interessantes. Os campos nome, descrição, local foram separados do
evento principal. Agora, um evento nada mais é do que um "slot" de tempo
em que algo pode acontecer, como uma palestra ou um minicurso.

Caso seja um evento do tipo palestra ou minicurso, a entrada de dados
será feita em outro menu. No caso de eventos do cultural ou outros, a
entrada dos dados do evento será feita clicando no evento na página de
administração e em seguida entrando na seção "Adicionar dados extras"

A tabela de empresas ganhou o campo "URL"

--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -38,7 +38,7 @@
 									<a href="{% url "management_events_edit" event.obj.pk %}">
 										<div class="schedule-event {{event.type}}"
 											style="left: 0; right: 0; top: {{event.start_slot|mul:20}}px; height: {{event.slots|mul:20}}px;">
-											{{event.name}}
+											{{event.type_display}}
 										</div>
 									</a>
 								{% endfor %}
