--- a/management/templates/management/lectures.html
+++ b/management/templates/management/lectures.html
@@ -1,1 +1,36 @@
 {% extends "management/base.html" %}
+
+{% block user_content %}
+  <div class="row">
+    <h1>Palestras</h1>
+    <div class="large-12 columns">
+      <a class="button" href="{% url "management_lectures_add" %}">Adicionar palestra</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      <table>
+        <thead>
+          <tr>
+            <th>slot</th>
+            <th>título</th>
+            <th>local</th>
+            <th>palestrante</th>
+            <th>editar</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for lecture in lectures %}
+            <tr>
+              <td>{{lecture.slot|default:"<span class=\"alert-box alert\">sem horário</span>"}}</td>
+              <td>{{lecture.title}}</td>
+              <td>{{lecture.place|default:"<span class=\"alert-box alert\">sem local</span>"}}</td>
+              <td>{{lecture.speaker|default:"<span class=\"alert-box alert\">sem palestrante</span>"}}</td>
+              <td><a href="{% url "management_lectures_edit" lecture.pk %}"><i class="fa fa-pencil-square-o fa-2x"></i></td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+{% endblock %}
