--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -48,7 +48,7 @@
         <div class="row text-center">
           <div class="large-4 columns">
             <h1>Realização</h1>
-              <img class="realizacao" src="{% static "img/organizacao.png" %}" >
+              <img class="realizacao" src="{% static "img/organizacao.jpg" %}" >
             </div>
 
             <div class="large-4 columns">
@@ -94,14 +94,14 @@
              
               <div class="large-12 columns">
 		  <ul>
-		      <p><a href="#">Programação&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">Notícias&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">Locais&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">Riddle&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">WICT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">Patrocinadores&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">Área de usuário&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		      <a href="#">Galeria&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <p><a href="#">Programação</a>
+		      <a href="#">Notícias</a>
+		      <a href="#">Locais</a>
+		      <a href="#">Riddle</a>
+		      <a href="#">WICT</a>
+		      <a href="#">Patrocinadores</a>
+		      <a href="#">Área de usuário</a>
+		      <a href="#">Galeria</a>
 		      <a href="#">Contato & FAQ</a>
 		     </p> 
 		  </ul>
