--- a/website/templates/aldryn_blog/base.html
+++ b/website/templates/aldryn_blog/base.html
@@ -3,11 +3,15 @@
 {% block base_content %}
 	<div class="row">
 		<div class="large-12 columns">
+			{% comment %}
 			{% block extend_breadcrumb %}
 				{{block.super}}
-				{% block blog_breadcrumb %}
-				{% endblock %}
+				<ul class="breadcrumbs">
+					{% block blog_breadcrumb %}
+					{% endblock %}
+				</ul>
 			{% endblock %}
+			{% endcomment %}
 
 			<div class="app app-blog">
 				{% block content_blog %}{% endblock %}
