--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -128,6 +128,7 @@ footer {
       background-color: #fff;
       height: 4px;
 }
+
 body{
 	.rodape-link {
 		padding: 1.25rem 0;
@@ -138,22 +139,26 @@ body{
 		}
 	}	
 }
+
 .media-icons-bottom {
     > a {
         color: #222;
     }
     padding-top: 30%;
 }
-.realizacao{
-	padding-top: 1.25rem;
+
+@media #{$large-up} {
+	img.realizacao {
+		padding-top: 30px;
+	}
 }
 
-.semcomp-contatos{
+.semcomp-contatos {
 	color: black;
 	list-style-type: none;
 }
 
-.texto-rodape{
+.texto-rodape {
 	color: #B0E2FF;
 }
 
