--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -6719,10 +6719,11 @@ body .rodape-link a {
   color: #222;
 }
 
-.realizacao {
-  padding-top: 1.25rem;
+@media only screen and (min-width: 64.063em) {
+  img.realizacao {
+    padding-top: 30px;
+  }
 }
-
 .semcomp-contatos {
   color: black;
   list-style-type: none;
@@ -6734,4 +6735,15 @@ body .rodape-link a {
 
 .texto-rodape:hover, texto-rodape:focus {
   color: #4F94CD;
+}
+
+@media only screen and (min-width: 40.063em) {
+  #video-apresentacao {
+    padding: 0 3rem;
+  }
+}
+@media only screen and (min-width: 64.063em) {
+  #video-apresentacao {
+    padding: 0 10rem;
+  }
 }
