Renderiza a seção "Mapa do site" automaticamente.

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -93,8 +93,9 @@
          {% static_placeholder "mapa do site" %}
              
               <div class="large-12 columns">
-		  <ul>
-		      <p><a href="#">Programação</a>
+		{% render_mapa %}
+		  <!--<ul>
+		      <a href="#">Programação</a>
 		      <a href="#">Notícias</a>
 		      <a href="#">Locais</a>
 		      <a href="#">Riddle</a>
@@ -103,8 +104,8 @@
 		      <a href="#">Área de usuário</a>
 		      <a href="#">Galeria</a>
 		      <a href="#">Contato & FAQ</a>
-		     </p> 
-		  </ul>
+		      
+		  </ul>-->
 	      </div>
         </div>
 
