--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -35,64 +35,7 @@
 
 {% block base_content %}
   <div class="row">
-    <div class="large-8 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "evento" %}
-      </div>
-    </div>
-    <div class="large-4 columns">
-      <div class="panel tile-height-4">
-        <!--{% placeholder "noticias" %}-->
-        <div style="width:261px;height:261px;text-align:center;margin:auto;" ><object width="261" height="261" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"  codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"> <param name="flashvars" value="offsite=true&amp;lang=en-us&amp;page_show_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2Fshow&amp;page_show_back_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2F&amp;set_id=72157636792439686" /> <param name="allowFullScreen" value="true" /> <param name="src" value="https://www.flickr.com/apps/slideshow/show.swf?v=71649" /> <embed width="261" height="261" type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=71649" flashvars="offsite=true&amp;lang=en-us&amp;page_show_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2Fshow&amp;page_show_back_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2F&amp;set_id=72157636792439686" allowFullScreen="true" /> </object><br /></div>
-      </div>
-    </div>
+	{% placeholder "ladrilhos" %}
   </div>
-  
-  <div class="row"> 
-    <div class="large-4 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "ver o nome1" %}
-      </div>
-    </div>
-    <div class="large-4 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "ver o nome2" %}
-      </div>
-    </div>
-    <div class="large-4 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "ver o nome3" %}
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-4 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "local" %}
-      </div>
-      <div class="panel tile-height-4">
-        {% placeholder "datas_importantes" %}
-      </div>
-    </div>
-    <div class="large-8 columns">
-      <div class="panel tile-height-8">
-        {% placeholder "palestras_minicursos" %}
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-4 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "extras" %}
-      </div>
-    </div>
-    <div class="large-8 columns">
-      <div class="panel tile-height-4">
-        {% placeholder "feira_recrutamento" %}
-      </div>
-    </div>
-  </div>
-{% endblock %}
+    {% endblock %}
 
