Adiciona um panel na mensagem de "sem notícias".

--- a/website/templates/aldryn_blog/includes/blog_items.html
+++ b/website/templates/aldryn_blog/includes/blog_items.html
@@ -21,7 +21,11 @@
 	</div>
 	</div>
 {% empty %}
-<li class="blog-empty"><p>{% trans "No entry found." %}</p></li>
+	<div class="large-12 columns">
+	<div class="panel">
+<p>{% trans "Sem notícias." %}</p>
+	</div>
+	</div>
 {% endfor %}
 </div>
 
