--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -1055,6 +1055,7 @@ select {
     padding-right: 0.9375rem;
     float: left;
   }
+
   .large-1 {
     width: 8.33333%;
   }
@@ -2836,7 +2837,7 @@ form .row textarea.columns {
 /* Label Styles */
 label {
   font-size: 0.875rem;
-  color: #4d4d4d;
+  color: #b3b3b3;
   cursor: pointer;
   display: block;
   font-weight: normal;
@@ -2854,7 +2855,7 @@ label.inline {
 }
 label small {
   text-transform: capitalize;
-  color: #676767;
+  color: #bebebe;
 }
 
 select::-ms-expand {
@@ -3132,7 +3133,7 @@ fieldset {
 }
 fieldset legend {
   font-weight: bold;
-  background: white;
+  background: none;
   padding: 0 0.1875rem;
   margin: 0;
   margin-left: -0.1875rem;
@@ -3191,7 +3192,7 @@ span.error, small.error {
   color: white;
 }
 .error > label > small {
-  color: #676767;
+  color: #bebebe;
   background: transparent;
   padding: 0;
   text-transform: capitalize;
@@ -5610,7 +5611,6 @@ th,
 td {
   margin: 0;
   padding: 0;
-  color: black;
 }
 
 /* Default Link Styles */
@@ -6589,7 +6589,6 @@ body {
 main {
   padding-top: 100px;
 }
-
 
 .hero {
   padding-top: 100px;
