--- a/website/static/sass/_localsettings.scss
+++ b/website/static/sass/_localsettings.scss
@@ -3,3 +3,7 @@ $static_dir: "/static/";
 $body-font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $body-font-color: #eee;
 $header-font-color: #222;
+
+$legend-bg: none;
+$form-label-font-color: scale-color(#fff, $lightness: -30%);
+
