--- a/website/templates/website/templatetags/render_sponsors.html
+++ b/website/templates/website/templatetags/render_sponsors.html
@@ -4,9 +4,19 @@
       <div class="large-12 columns">
         <h2 class="text-center">Patrocinadores <small><a href="#">Quer ser um patrocinador?</a></small></h2>
         <div class="row grid-logo">
-          <ul class="small-block-grid-2 medium-block-grid-4">
+          <ul class="small-block-grid-1 medium-block-grid-1 ultrabig">
+            {% for sponsor in adamantium_sponsors %}
+              <li><a href="{{sponsor.url}}"><img src="{{sponsor.logo.url}}" alt="{{sponsor.name}}" title="{{sponsor.name}}"></a></li>
+            {% endfor %}
+          </ul>
+          <ul class="small-block-grid-1 medium-block-grid-2 big">
+            {% for sponsor in diamond_sponsors %}
+              <li><a href="{{sponsor.url}}"><img src="{{sponsor.logo.url}}" alt="{{sponsor.name}}" title="{{sponsor.name}}"></a></li>
+            {% endfor %}
+          </ul>
+          <ul class="small-block-grid-2 medium-block-grid-4 normal">
             {% for sponsor in sponsors %}
-              <li><a href="{{sponsor.url}}"><img src="{{sponsor.logo.url}}" alt="{{sponsor.name}}" title="{{sponsor.name}}"></a><li>
+              <li><a href="{{sponsor.url}}"><img src="{{sponsor.logo.url}}" alt="{{sponsor.name}}" title="{{sponsor.name}}"></a></li>
             {% endfor %}
           </ul>
         </div>
@@ -20,9 +30,9 @@
       <div class="large-12 columns">
         <h2 class="text-center">Apoios</h2>
         <div class="row grid-logo">
-          <ul class="small-block-grid-2 medium-block-grid-4">
+          <ul class="small-block-grid-2 medium-block-grid-4 normal">
             {% for partner in partners %}
-              <li><a href="{{partner.url}}"><img src="{{partner.logo.url}}" alt="{{partner.name}}" title="{{partner.name}}"></a><li>
+              <li><a href="{{partner.url}}"><img src="{{partner.logo.url}}" alt="{{partner.name}}" title="{{partner.name}}"></a></li>
             {% endfor %}
           </ul>
         </div>
