--- a/website/static/sass/_localsettings.scss
+++ b/website/static/sass/_localsettings.scss
@@ -1,4 +1,4 @@
-$static_dir: "/static/";
+$static_dir: "/17/static/";
 
 $body-font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $body-font-color: #eee;
