--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -6732,7 +6732,7 @@ body {
 }
 
 .menu-topo {
-  background-image: url('/static/img/header.png?1400038085');
+  background-image: url('/17/static/img/header.png?1400038085');
   background-repeat: no-repeat;
   background-position: center top;
   text-transform: uppercase;
@@ -6756,7 +6756,7 @@ main {
 
 .hero {
   padding-top: 100px;
-  background: url('/static/img/hero-background.jpg?1400038085') no-repeat center center fixed;
+  background: url('/17/static/img/hero-background.jpg?1400038085') no-repeat center center fixed;
   background-size: cover;
 }
 .hero > h1 {
