--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -3326,10 +3326,10 @@ label.error {
   text-decoration: none;
   font-size: 24px;
   font-weight: normal;
-  line-height: .5 !important;
+  line-height: 0.5 !important;
 }
 .joyride-close-tip:hover, .joyride-close-tip:focus {
-  color: #eee !important;
+  color: #eeeeee !important;
 }
 
 .joyride-modal-bg {
@@ -3350,7 +3350,7 @@ label.error {
   position: absolute;
   border-radius: 3px;
   z-index: 102;
-  box-shadow: 0 0 15px #ffffff;
+  box-shadow: 0 0 15px white;
 }
 
 .joyride-expose-cover {
@@ -3510,7 +3510,7 @@ kbd {
   margin-top: -20px;
   margin-left: -20px;
   border: solid 3px;
-  border-color: #555 #fff;
+  border-color: #555555 white;
   border-radius: 1000px;
   animation-name: rotate;
   animation-duration: 1.5s;
@@ -3670,7 +3670,7 @@ kbd {
   right: 0;
   width: 11px;
   height: 14px;
-  border: solid 4px #fff;
+  border: solid 4px white;
   border-top: none;
   border-bottom: none;
 }
@@ -3686,10 +3686,10 @@ kbd {
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
-  border-color: transparent #fff transparent transparent;
+  border-color: transparent white transparent transparent;
 }
 .orbit-container .orbit-timer.paused > span.dark {
-  border-color: transparent #333 transparent transparent;
+  border-color: transparent #333333 transparent transparent;
 }
 .orbit-container:hover .orbit-timer > span {
   display: block;
@@ -4233,7 +4233,7 @@ dialog[open] {
 
 @media print {
   dialog, .reveal-modal {
-    background: #fff !important;
+    background: white !important;
   }
 }
 .side-nav {
@@ -5147,7 +5147,7 @@ blockquote p {
 @media print {
   * {
     background: transparent !important;
-    color: #000 !important;
+    color: black !important;
     /* Black prints faster: h5bp.com/s */
     box-shadow: none !important;
     text-shadow: none !important;
@@ -5174,7 +5174,7 @@ blockquote p {
 
   pre,
   blockquote {
-    border: 1px solid #999;
+    border: 1px solid #999999;
     page-break-inside: avoid;
   }
 
@@ -6879,8 +6879,8 @@ footer {
 }
 
 .hrzinho {
-  border-top: 1px dashed #000;
-  border-bottom: 1px solid #000;
+  border-top: 1px dashed black;
+  border-bottom: 1px solid black;
   color: #fff;
   background-color: #fff;
   height: 4px;
@@ -6931,4 +6931,11 @@ body .rodape-link a {
   #video-apresentacao {
     padding: 0 10rem;
   }
+}
+
+td.track-A {
+  background-color: yellow;
+}
+td.track-V {
+  background-color: green;
 }
