--- a/website/templates/website/templatetags/render_sponsors.html
+++ b/website/templates/website/templatetags/render_sponsors.html
@@ -4,7 +4,7 @@
       <div class="large-12 columns">
         <h2 class="text-center">Patrocinadores <small><a href="#">Quer ser um patrocinador?</a></small></h2>
         <div class="row grid-logo">
-          <ul class="small-block-grid-1 ultrabig">
+          <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 ultrabig">
             {% for sponsor in adamantium_sponsors %}
               <li><a href="{{sponsor.url}}"><img src="{{sponsor.logo.url}}" alt="{{sponsor.name}}" title="{{sponsor.name}}"></a></li>
             {% endfor %}
