--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -6946,12 +6946,15 @@ form img {
 
 .sponsor-description {
   color: black;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .sponsor-description h2 {
   font-size: 1.618rem;
 }
 .sponsor-description .panel {
   position: relative;
+  height: 100%;
 }
 .sponsor-description .link {
   position: absolute;
