--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -6956,12 +6956,15 @@ form img {
   position: relative;
   height: 100%;
 }
+.sponsor-description p {
+  text-indent: 2rem;
+}
 .sponsor-description .link {
   position: absolute;
   bottom: 1rem;
   right: 1rem;
   float: right;
-  font-size: 0.618rem;
+  font-size: 0.667rem;
 }
 .sponsor-description .link ::before {
   content: "Site: ";
