--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -24,9 +24,9 @@
 		<a class="left-off-canvas-toggle menu-icon" >
 			<span></span></a> 
 	</section> 
-	<section class="right-small"> 
-		<a class="right-off-canvas-toggle menu-icon" >
-		<span></span></a> 
+	<section class="middle tab-bar-section"> 
+		<a class="left-off-canvas-toggle" >
+		<h1 class="title">Semcomp</h1></a>
 	</section> 
 </nav>
 
