--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -65,7 +65,7 @@
         <div class="row text-center">
           <div class="medium-4 columns">
             <h1>Realização</h1>
-              <img class="realizacao" src="{% static "img/organizacao.jpg" %}" >
+              <img class="realizacao" src="{% static "img/organizacao.jpg" %}" alt="Realização: FoG, ICMC, PET">
             </div>
 
             <div class="medium-4 columns">
