recompila css e adiciona a frase "siga-nos"

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -81,6 +81,7 @@
             </div>
 
             <div class="medium-4 columns">
+              <h1>Siga-nos!</h1>
               <p class="media-icons-bottom">
                 <a href="https://facebook.com/semcomp17">
                   <span class="fa-stack fa-2x">
