Revisão form contato

--- a/semcomp_contact_form/templates/contact_form/contact_form.html
+++ b/semcomp_contact_form/templates/contact_form/contact_form.html
@@ -1,4 +1,5 @@
 {% extends "website/base.html" %}
+{% load cms_tags %}
 
 {% block base_content %}
   <div class="row">
@@ -6,7 +7,7 @@
       
       <div class="large-6 medium-centered columns">
           <h1>Contato</h1>
-          <form method="post"> {# nao tem parametro action, será enviado para a propria URL que corresponde ao Form #}
+          <form method="post" action="{% page_url "contato" %}">
             {% csrf_token %} {# impedir que outros site enviem este formulario, funcionalidade do Django#}
             {# inputs do form #}
             {{form.name}}
