--- a/semcomp_contact_form/templates/contact_form/contact_form_message.html
+++ b/semcomp_contact_form/templates/contact_form/contact_form_message.html
@@ -4,7 +4,7 @@
     </head>
     <body style='background-color: #eee; margin: 0px; padding: 0px;'>
         <div style='padding: 15px;'>
-        <a href='http://semcomp.icmc.usp.br'><img src='http://semcomp.icmc.usp.br/images/logo-semcomp.png' height='100px'></a>
+        <a href='http://semcomp.icmc.usp.br'><img src="http://semcomp.icmc.usp.br/17/static/img/email/logo-semcomp-17.png" height='100px'></a>
         </div>
         <div style='font-family:  \"Open Sans\", \"Helvetica Neue\", \"Helvetica\", Helvetica, Arial, sans-serif; background-color: #fff; padding: 20px;'>
         <h2>Contato Semcomp 17</h2>
@@ -15,9 +15,9 @@
         </div>
         <div style='padding: 15px;'>
             <div style='float:right;'>
-            <a href='https://facebook.com/semcomp17'><img src='http://semcomp.icmc.usp.br/images/facebook-72.png' height='50px'></a>
-            <a href='https://plus.google.com/103900653682189265366'><img src='http://semcomp.icmc.usp.br/images/google-plus-72.png' height='50px'></a>
-            <a href='https://twitter.com/semcomp'><img src='http://semcomp.icmc.usp.br/images/twitter-72.png' height='50px'></a>
+            <a href='https://facebook.com/semcomp17'><img src="http://semcomp.icmc.usp.br/17/static/img/email/facebook-72.png" height='50px'></a>
+            <a href='https://plus.google.com/+semcomp'><img src="http://semcomp.icmc.usp.br/17/static/img/email/google-plus-72.png" height='50px'></a>
+            <a href='https://twitter.com/semcomp'><img src="http://semcomp.icmc.usp.br/17/static/img/email/twitter-72.png" height='50px'></a>
             </div>
         </div>
     </body>
