--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -58,7 +58,7 @@ main {
     @media #{$large-up}{
         padding-top: $header-offset;
     }
-    background: image-url("hero-background.jpg") no-repeat center center fixed;
+    background: image-url("hero-background.jpg") no-repeat center center;
     background-size: cover;
 
     > h1 {
