mostra mensagem enquanto compila o css de produção

--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -3326,10 +3326,10 @@ label.error {
   text-decoration: none;
   font-size: 24px;
   font-weight: normal;
-  line-height: 0.5 !important;
+  line-height: .5 !important;
 }
 .joyride-close-tip:hover, .joyride-close-tip:focus {
-  color: #eeeeee !important;
+  color: #eee !important;
 }
 
 .joyride-modal-bg {
@@ -3350,7 +3350,7 @@ label.error {
   position: absolute;
   border-radius: 3px;
   z-index: 102;
-  box-shadow: 0 0 15px white;
+  box-shadow: 0 0 15px #ffffff;
 }
 
 .joyride-expose-cover {
@@ -3510,7 +3510,7 @@ kbd {
   margin-top: -20px;
   margin-left: -20px;
   border: solid 3px;
-  border-color: #555555 white;
+  border-color: #555 #fff;
   border-radius: 1000px;
   animation-name: rotate;
   animation-duration: 1.5s;
@@ -3670,7 +3670,7 @@ kbd {
   right: 0;
   width: 11px;
   height: 14px;
-  border: solid 4px white;
+  border: solid 4px #fff;
   border-top: none;
   border-bottom: none;
 }
@@ -3686,10 +3686,10 @@ kbd {
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
-  border-color: transparent white transparent transparent;
+  border-color: transparent #fff transparent transparent;
 }
 .orbit-container .orbit-timer.paused > span.dark {
-  border-color: transparent #333333 transparent transparent;
+  border-color: transparent #333 transparent transparent;
 }
 .orbit-container:hover .orbit-timer > span {
   display: block;
@@ -4233,7 +4233,7 @@ dialog[open] {
 
 @media print {
   dialog, .reveal-modal {
-    background: white !important;
+    background: #fff !important;
   }
 }
 .side-nav {
@@ -5147,7 +5147,7 @@ blockquote p {
 @media print {
   * {
     background: transparent !important;
-    color: black !important;
+    color: #000 !important;
     /* Black prints faster: h5bp.com/s */
     box-shadow: none !important;
     text-shadow: none !important;
@@ -5174,7 +5174,7 @@ blockquote p {
 
   pre,
   blockquote {
-    border: 1px solid #999999;
+    border: 1px solid #999;
     page-break-inside: avoid;
   }
 
@@ -6732,7 +6732,7 @@ body {
 }
 
 .menu-topo {
-  background-image: url('/17/static/img/header.png?1404755192');
+  background-image: url('/17/static/img/header.png?1400038085');
   background-repeat: no-repeat;
   background-position: center top;
   text-transform: uppercase;
@@ -6761,7 +6761,7 @@ main {
 
 .hero {
   padding-top: 10px;
-  background: url('/17/static/img/hero-background.jpg?1404755192') no-repeat center center;
+  background: url('/17/static/img/hero-background.jpg?1404882072') no-repeat center center;
   background-size: cover;
 }
 @media only screen and (min-width: 64.063em) {
@@ -6893,8 +6893,8 @@ footer {
 }
 
 .hrzinho {
-  border-top: 1px dashed black;
-  border-bottom: 1px solid black;
+  border-top: 1px dashed #000;
+  border-bottom: 1px solid #000;
   color: #fff;
   background-color: #fff;
   height: 4px;
