conserta exibição do calendário na página de administração
também adiciona uma opção "outro" no tipo de evento. as cores que são
usadas pra mostrar os eventos na página de administração são cores com
luminância igual, pra não parecer que alguma delas é mais importante ou
chama mais a atenção que outras. No caso do evento neutro, provavelmente
vai ser mais interessante usar uma cor que seja neutra de verdade, como
um cinza ou algo mais leve

--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -31,8 +31,7 @@
 						{% endfor %}
 					</td>
 					{% for day in days %}
-						<td>
-							<div class="day-schedule">
+						<td class="day-schedule">
 								{% for event in day %}
 									{# olhar no css qual o tamanho da linha se for alterar aqui #}
 									<a href="{% url "management_events_edit" event.obj.pk %}">
@@ -42,7 +41,6 @@
 										</div>
 									</a>
 								{% endfor %}
-							</div>
 						</td>
 					{% endfor %}
 				</tr>
