--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -6991,3 +6991,47 @@ form img {
   width: 100%;
   height: auto;
 }
+
+.schedule-event {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+.schedule-event.palestra {
+  background-color: #d80f0f;
+}
+.schedule-event.minicurso {
+  background-color: #009700;
+}
+.schedule-event.coffee {
+  background-color: #5151fd;
+}
+.schedule-event.neutro {
+  background-color: #868600;
+}
+.schedule-event.cultural {
+  background-color: #008f8f;
+}
+.schedule-event.outro {
+  background-color: #b700b7;
+}
+
+.day-schedule {
+  position: relative;
+  width: 100px;
+}
+.day-schedule a {
+  color: white;
+}
+
+.timeslots {
+  padding-top: 0;
+}
+.timeslots .schedule-timeslot {
+  line-height: 20px;
+}
